[package]
name = "wasm-repeated-animation-frame"
description = "Repeatedly call requestAnimationFrame in Rust"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ChocolateLoverRaj/wasm-repeated-animation-frame"

[dependencies]
async-channel = "2.1.1"
futures = "0.3.29"
js-sys = "0.3.66"
manual_future = "0.1.1"
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.39"

[dependencies.web-sys]
version = "0.3.66"
features = ["Window", "console"]
